# hizli

./: Cargo.toml  README.md
hizli/: Cargo.toml
hizli-core/: Cargo.toml
hizli-core/src/: data.rs  lib.rs  ns_attr.rs  rules.rs  spanable.rs
hizli-core/src/bindings/: field_binding.rs  field_type.rs  mod.rs  struct_binding.rs  variant_binding.rs  variant_pattern.rs
hizli-macros/: Cargo.toml
hizli-macros/src/: lib.rs
hizli-macros/src/parse/: handler.rs  mod.rs  product.rs  sum.rs  sum_expected_one_of.rs
hizli-macros/src/spanable/: handler.rs  mod.rs  product.rs  sum.rs
hizli-test/: Cargo.toml
hizli-test/src/: lib.rs
hizli/src/: lib.rs
